--- a/Home works/3/hometask_3_zotov.ipynb
+++ b/Home works/3/hometask_3_zotov.ipynb
@@ -3347,7 +3347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=blue>Функция `blender_cross_val(X, y, clf1, clf2, cv)` осуществляет поиск лучшего гиперпараметра `alpha` и возвращает фрейм с результами всех экспериментов и название колонки с лучшим средним значением `ROC-AUC`. Используется кросс-валидация  смешанной модели `Blender` на 5-ти фолдах выборки `X`, размеченной вектором `y`. Базовые классификаторы `clf1` и `clf2` мы будем брать из словаря `classifiers`.</font>"
+    "<font color=blue>Функция `blender_cross_val(blender, X, y, cv)` осуществляет поиск лучшего гиперпараметра `alpha` и возвращает фрейм с результами всех экспериментов и название колонки с лучшим средним значением `ROC-AUC`. Используется кросс-валидация  смешанной модели `Blender` на 5-ти фолдах выборки `X`, размеченной вектором `y`.</font>"
    ]
   },
   {
