--- a/Home works/3/hometask_3_zotov.ipynb
+++ b/Home works/3/hometask_3_zotov.ipynb
@@ -1394,7 +1394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=blue>Для классификатора `kNN` четкий макимум не выражен, а наилучшее качество дал гиперпараметр `n_neighbors=6`. Для классификатора `SGD` также максимум не выражен, а лучшей функцией потерь в итоге оказалась `squared_hinge`.</font>"
+    "<font color=blue>Для классификатора `kNN` четкий максимум не выражен, а наилучшее качество дал гиперпараметр `n_neighbors=6`. Для классификатора `SGD` также максимум не выражен, а лучшей функцией потерь в итоге оказалась `squared_hinge`.</font>"
    ]
   },
   {
@@ -1509,7 +1509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=blue>Для наглядности результатов по классификатору ` GaussianNB` горизонтальная шкала (шкала значений гиперпараметра) прологорифмирована.</font>"
+    "<font color=blue>Для наглядности результатов по классификатору `GaussianNB` горизонтальная шкала (шкала значений гиперпараметра) прологорифмирована.</font>"
    ]
   },
   {
@@ -3871,9 +3871,9 @@
    "source": [
     "<font color=blue>\n",
     "\n",
-    "Почти во всех случаях стандартизация числовых признаков улучшило качество модели, кроме может быть `GaussianNB` (у этой модели качество осталось на прежнем уровне для оптимального гиперпараметра). Также стоит отметить, что все модели после добавления категориальных признаков заметно повысили качество `ROC-AUC`.\n",
+    "Почти во всех случаях стандартизация числовых признаков улучшила качество модели, кроме может быть `GaussianNB` (у этой модели качество осталось на прежнем уровне для оптимального гиперпараметра). Также стоит отметить, что все модели после добавления категориальных признаков заметно повысили качество `ROC-AUC`.\n",
     "\n",
-    "Эксперименты показали, что в зависимом от модели и гиперпараметра перебор по сетке может как приводить и к заметному улучшению качества, и к слабо заметному. Например, `ROC-AUC` качество модели `kNN` сильно зависит от гиперпараметра `n_neighbors`, но перебор по гиперпараметру `metric` дал совсем не большое улучшение. Аналогично для модели `SGD` можно отметить заметное влияние на модель гиперпараметра `loss`, но слабое влияние гиперпараметра `penalty`.  Можно также отметить не очень большое влияние гиперпараметра `C` на модели `SVC` и `Logistic Regression`. А после нормализации данных совсем исчезло влияние гиперпараметра `var_smoothing` на модель `GaussianNB`.\n",
+    "Эксперименты показали, что в зависимости от модели и гиперпараметра перебор по сетке может приводить и к заметному улучшению качества, и к слабо заметному. Например, `ROC-AUC` модели `kNN` сильно зависит от гиперпараметра `n_neighbors`, но перебор по гиперпараметру `metric` дал совсем не большое улучшение. Аналогично для модели `SGD` можно отметить заметное влияние на модель гиперпараметра `loss`, но слабое влияние гиперпараметра `penalty`.  Можно также отметить не очень большое влияние гиперпараметра `C` на модели `SVC` и `Logistic Regression`. После нормализации данных совсем исчезло влияние гиперпараметра `var_smoothing` на модель `GaussianNB`.\n",
     "\n",
     "</font>"
    ]
